--- a/amplify.yml
+++ b/amplify.yml
@@ -1,23 +1,3 @@
+# Specify the version of the build image
 version: 1
-backend:
-  phases:
-    build:
-      commands:
-        - nvm use 18
-        - npm ci
-        - npx amplify pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - npm ci
-    build:
-      commands:
-        - npm run build
-  artifacts:
-    baseDirectory: .next
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
+
